==> RAKWireless/Evaluation_Boards/RAK4630/lorawan/SX126x_Arduino_base/src/boards/sx126x/sx126x-board.cpp <==
#include <Arduino.h>
#include "boards/mcu/board.h"
#include "boards/mcu/spi_board.h"
#include "radio/sx126x/sx126x.h"
#include "sx126x-board.h"

	void SX126xIoIrqInit(DioIrqHandler dioIrq)
	{
		attachInterrupt(_hwConfig.PIN_LORA_DIO_1, dioIrq, RISING);
	}

	void SX126xIoDeInit(void)
	{
		dio3IsOutput = false;
		detachInterrupt(_hwConfig.PIN_LORA_DIO_1);
		pinMode(_hwConfig.PIN_LORA_NSS, INPUT);
		pinMode(_hwConfig.PIN_LORA_BUSY, INPUT);
		pinMode(_hwConfig.PIN_LORA_DIO_1, INPUT);
		pinMode(_hwConfig.PIN_LORA_RESET, INPUT);
	}

	void SX126xReset(void)
	{
		// delay(10);
		// digitalWrite(_hwConfig.PIN_LORA_RESET, LOW);
		pinMode(_hwConfig.PIN_LORA_RESET, OUTPUT);
		// delay(20);
        delay(5);
		// digitalWrite(_hwConfig.PIN_LORA_RESET, HIGH);
		pinMode(_hwConfig.PIN_LORA_RESET, INPUT);
		delay(5);
		dio3IsOutput = false;
	}

	void SX126xWaitOnBusy(void)
	{
		while (digitalRead(_hwConfig.PIN_LORA_BUSY) == HIGH)
		{
			delay(1000);
            // Serial.println("================SX126xWaitOnBusy=======================");
		}
	}

	void SX126xWakeup(void)
	{
		dio3IsOutput = false;
		BoardDisableIrq();

		digitalWrite(_hwConfig.PIN_LORA_NSS, LOW);

		SPI_LORA.beginTransaction(spiSettings);
		////////////////////////////////////////
		SPI_LORA.transfer(RADIO_GET_STATUS );
		SPI_LORA.transfer( 0x00 );
		///////////////////////////////////////
		SPI_LORA.endTransaction();
		digitalWrite(_hwConfig.PIN_LORA_NSS, HIGH);

		// Wait for chip to be ready.
		SX126xWaitOnBusy();
		BoardEnableIrq();
		//Serial.println("==============SX126xWakeup=============");
	}

	void SX126xReadCommand(RadioCommands_t command, uint8_t *buffer, uint16_t size)
	{
		SX126xCheckDeviceReady();

		digitalWrite(_hwConfig.PIN_LORA_NSS, LOW);

		SPI_LORA.beginTransaction(spiSettings);
		SPI_LORA.transfer((uint8_t)command);
		SPI_LORA.transfer(0x00);
		for (uint16_t i = 0; i < size; i++)
		{
			buffer[i] = SPI_LORA.transfer(0x00);
		}

		SPI_LORA.endTransaction();
		digitalWrite(_hwConfig.PIN_LORA_NSS, HIGH);

		SX126xWaitOnBusy();
	}

	void SX126xAntSwOn(void)
	{
		if (_hwConfig.USE_DIO3_ANT_SWITCH)
		{
			SX126xDio3Control(true);
		}
	}

	void SX126xAntSwOff(void)
	{
		if (_hwConfig.USE_DIO3_ANT_SWITCH)
		{
			SX126xDio3Control(false);
		}
	}
