==> Snabeldier/ABC_Project/apollo3_loramac_library/boards/Apollo3/sx126x-board.c <==
#include "sx126x.h"
#include "am_mcu_apollo.h"
#include "spi.h"
#include "gpio.h"
#include "sx126x-board.h"
#include "pins.h"
#include "transmitConfig.h"
#include "delay.h"
#include "utilities.h"
#include "LoRaMac.h"
#include "LoRaMacCrypto.h"
#include "se-identity.h"
#include "cmac.h"
#include "aes.h"

void SX126xIoIrqInit( DioIrqHandler dioIrq )
{
//    GpioSetInterrupt( &SX126x.DIO1, IRQ_RISING_EDGE, IRQ_HIGH_PRIORITY, dioIrq );

    // Init IRQ interrupt for DIO1
//          // IRQ pin
//    gpioSetLoraIRQ(LORA_IRQ);
//    gpioInterruptClear(LORA_IRQ);
//    gpioSetInterrupt(LORA_IRQ);

//    am_hal_gpio_interrupt_register(LORA_IRQ,(am_hal_gpio_handler_t)dioIrq);
	am_hal_gpio_pinconfig(LORA_IRQ,gpioLoraIRQ);
	AM_HAL_GPIO_MASKCREATE(GpioIntMask);
	am_hal_gpio_interrupt_clear(AM_HAL_GPIO_MASKBIT(pGpioIntMask, LORA_IRQ));
	am_hal_gpio_interrupt_enable(AM_HAL_GPIO_MASKBIT(pGpioIntMask, LORA_IRQ));
	am_hal_gpio_interrupt_register(LORA_IRQ,*(am_hal_gpio_handler_t)dioIrq);
	am_hal_interrupt_master_enable();
	NVIC_EnableIRQ(GPIO_IRQn);
}

void SX126xIoDeInit( void )
{
	am_hal_gpio_pinconfig(LORA_BUSY, g_AM_HAL_GPIO_DISABLE);
	am_hal_gpio_pinconfig(LORA_IRQ, g_AM_HAL_GPIO_DISABLE);
}

void SX126xReset( void )
{
    DelayMs( 10 );
    am_hal_gpio_pinconfig(LORA_RESET, g_AM_HAL_GPIO_OUTPUT);
	gpioWrite(LORA_RESET,0);
    DelayMs( 20 );
    gpioWrite(LORA_RESET,1);
    DelayMs( 10 );
}

void SX126xWaitOnBusy( void )
{
	DelayMs(1);
    while( gpioRead( LORA_BUSY ) == 1 );
}

void SX126xWakeup( void )
{
    CRITICAL_SECTION_BEGIN( );
	
	uint32_t data = 0x00;
	spi_command_write(1,RADIO_GET_STATUS, &data, 1);

	//spi_command_read(0,0,&data,2);
    // Wait for chip to be ready.
    SX126xWaitOnBusy( );

    // Update operating mode context variable
    SX126xSetOperatingMode( MODE_STDBY_RC );

    CRITICAL_SECTION_END( );
}

uint8_t SX126xReadCommand( RadioCommands_t command, uint8_t *buffer, uint16_t size )
{
    uint8_t status = 0;
	int i = 0;
    SX126xCheckDeviceReady( );

	uint8_t buf[32] = {0};
	uint8_t * p_buf = buf;
	//status = spi_command_read(1,command,(uint32_t * ) buffer, size+1);
	status = spi_command_read(1,command,(uint32_t *) p_buf, size+1);
	
	for(i = 0; i<size ; i++){
		*buffer++ = buf[i+1];
	}

    SX126xWaitOnBusy( );

    return status;
}

void SX126xAntSwOn( void )
{
#ifdef ANT_SW_PIN
	gpioWrite(ANT_SW_PIN,1);
#endif
}

void SX126xAntSwOff( void )
{
#ifdef ANT_SW_PIN
	gpioWrite(ANT_SW_PIN,0);	
#endif
}
